--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -1,5 +1,5 @@
-# .github/workflows/sync.yml
-name: Rebase Upstream
+name: Sync Fork
+
 on:
   schedule:
     - cron: "0 * * * 0"  # run once a day
@@ -7,12 +7,15 @@ on:
 
 jobs:
   sync:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@master
         with:
-          fetch-depth: 100  # greater than the number of commits you made
-      - uses: imba-tjd/rebase-upstream-action@master
+          fetch-depth: 500  # greater than the number of commits you made
+      - uses: tuxcanfly/rebase-upstream-action@master
         with:  # all args are optional
           upstream: ethereum-optimism/optimism
           branch: develop
+          token: ${{ secrets.REPO_PAT }}
